--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ nav ul li a{
     font-size: 15px;
     font-family: sans-serif;
 }
+nav ul li a:hover{
+    opacity: 0.7;
+}
 .btn-nav{
     background: rgb(90, 236, 114);
     padding: 10px 25px;
