--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ header{
     align-items: center;
     justify-content: space-between;
 }
+main{
+    font-family: sans-serif;
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    color: #fff;
+}
 nav ul{
     display: flex;
     flex-direction: row;
